@@ -6,6 +6,10 @@ major changes to the OpenSLP code base.  An entries should be separated by
 blank lines and include the date, developer's email, and change description.
 =============================================================================
 
+02/05/02 matt@caldera.com
+Added code so that 'slptool -v' will return the path of the slp.conf file
+libslp.so is configured to use.
+
 *** Tag OpenSLP-1.0.7 ***
 
 01/25/02 matt@caldera.com
